Translation Full Resources along with CRUDs is done along with search
