# routes/apis/v1.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Apis\V1\AuthController;
+use App\Http\Controllers\Apis\V1\TranslationsController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -26,5 +27,12 @@ Route::prefix('v1')->group(function () {
         Route::get('profile', [AuthController::class, 'profile'])->name('api.v1.profile');
         Route::put('profile', [AuthController::class, 'update'])->name('api.v1.profile.update');
         Route::get('logout', [AuthController::class, 'logout'])->name('api.v1.logout');
+
+        // Translations
+        Route::get('translations', [TranslationsController::class, 'index'])->name('api.v1.translations.index');
+        Route::post('translations', [TranslationsController::class, 'store'])->name('api.v1.translations.store');
+        Route::get('translations/{uuid}', [TranslationsController::class, 'show'])->name('api.v1.translations.show');
+        Route::put('translations/{uuid}', [TranslationsController::class, 'update'])->name('api.v1.translations.update');
+        Route::delete('translations/{uuid}', [TranslationsController::class, 'destroy'])->name('api.v1.translations.destroy');
     });
 });
